k8s/vaccine/vaccine-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: vaccine
  namespace: dev-vaccine
spec:
  selector:
    app: vaccine
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
